@@ -1,7 +1,7 @@
 /*
  * Routing.java (weberknecht)
  *
- * Copyright 2011 <Your Name>.
+ * Copyright 2011 Patrick Mairif.
  * The program is distributed under the terms of the Apache License (ALv2).
  *
  * created: 09.12.2011
